# hashing-old-archive

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.sh  build.sh  learned_hash.cpp  learned_hash_double.cpp
convenience/: CMakeLists.txt  convenience.hpp
convenience/include/: barrier.hpp  builtins.hpp  cache.hpp  conversion.hpp  math.hpp  mem_barrier.hpp  optimizer.hpp  rotate.hpp  semaphore.hpp  types.hpp
data/: synthetic.py
hash_functions/: CMakeLists.txt  README.md  city.config.hpp  city.hpp  convenience.hpp  hashing.hpp  mult.hpp  multadd.hpp  murmur.hpp  reduction.hpp  tabulation.hpp  types.hpp  xxh.hpp
hash_functions/include/: aqua.hpp  city.hpp  mult.hpp  multadd.hpp  murmur.hpp  reduction.hpp  tabulation.hpp  types.hpp  xxh.hpp
hash_functions/multiplicative_hashing/: README.md
hash_functions/wrappers/: aqua.hpp  city.hpp  meow.hpp  mult.hpp  multadd.hpp  murmur.hpp  tabulation.hpp  types.hpp  xxh.hpp
hashing/: CMakeLists.txt  README.md  hashing.hpp
hashing/include/: aqua.hpp  city.hpp  meow.hpp  mult.hpp  multadd.hpp  murmur.hpp  tabulation.hpp  xxh.hpp
hashtable/: CMakeLists.txt  hashtable.hpp
hashtable/include/: chained.hpp  cuckoo.hpp  probing.hpp
learned_imv_threaded_hashing/: CMakeLists.txt  README.md
learned_imv_threaded_hashing/include/utils/: eth_data_structures.h
learned_imv_threaded_hashing/src/runners/: hashing_runner.cpp
learned_models/: CMakeLists.txt  learned.hpp  learned_models.hpp
learned_models/include/: pgm.hpp  radixspline.hpp  rmi.hpp  rs.hpp
learned_models/rmi-collision-measurement/: learned_hash.cpp
learned_models/rs/: radix_spline.h
libdivide/: LICENSE.txt  libdivide.h
opensource_references/: README.md  gov  recsplit
opensource_references/multiplicative_hashing/: README.md
opensource_references/multiplicative_hashing/knuth/: README.md
opensource_references/spookyhash/: README.md
reduction/: CMakeLists.txt  reduction.hpp
results/: README.md  collision.csv  collision_plots.py  generate_plots.py  thesis_plots.ipynb  throughput.csv  throughput_clang_sample.csv  throughput_gcc_sample.csv  throughput_plots.py
results/collision_hash/: plots.py
results/collisions_hash/: README.md  collisions_hash-clang++.csv  collisions_hash-g++.csv  plots.py
results/collisions_learned/: README.md  collisions_learned-clang++.csv  collisions_learned-g++-10.csv  collisions_learned-g++.csv  plots.py
results/hashtable_hash/: README.md  hashtable_hash-g++-10.csv  hashtable_hash-g++.csv  plots.py
results/hashtable_learned/: README.md  hashtable_learned-g++-10.csv  hashtable_learned-g++.csv  hashtable_learned_redo_bucket_4-g++.csv  plots.py
results/plots/: throughput_hash.pgf  throughput_hash_gcc.pgf
results/short_paper_graphs/: build-all.sh
results/short_paper_graphs/chained/: plot.py
results/short_paper_graphs/cuckoo/: plot.py
results/short_paper_graphs/probe_times_overall/: build.sh  chained.csv  plot.py
results/throughput/: plots.py  throughput-clang++.csv
results/throughput_hash/: README.md  plots.py  throughput-g++-10.csv  throughput-g++.csv  throughput_hash-clang++.csv  throughput_hash-g++.csv
results/throughput_learned/: README.md  plots.py  requirements.txt  throughput_learned-clang++.csv  throughput_learned-g++-10.csv  throughput_learned-g++.csv
short_paper_graphs/: throughput.csv
short_paper_graphs/chained/: chained.csv  plot.py
short_paper_graphs/collisions/: collisions.csv  plot.py
short_paper_graphs/cuckoo/: cuckoo.csv  plot.py
short_paper_graphs/probe_times_overall/: cuckoo.csv  plot.py
short_paper_graphs/throughput/: build.sh  plot.py  throughput.csv
src/: CMakeLists.txt  args.cpp  collisions.cpp  collisions_hash.cpp  collisions_learned.cpp  dataset.cpp  hashtable_hash.cpp  hashtable_learned.cpp  main.cpp  test.cpp  throughput.cpp  throughput_hash.cpp  throughput_learned.cpp
src/include/: args.hpp  benchmark.hpp  convenience.hpp  csv.hpp  dataset.hpp  functors.hpp  hashing.hpp  learned_functors.hpp  random_hash.hpp  semaphore.hpp  xxHash.hpp
src/include/functors/: hash_functors.hpp  learned_functors.hpp  probing_functors.hpp  reduction_functors.hpp
